kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"appgw.ingress.kubernetes.io/use-private-ip":"true","kubernetes.io/ingress.class":"azure/application-gateway"},"name":"kibana-ingress","namespace":"elasticsearch"},"spec":{"rules":[{"host":"kibana.eus2.prod.vue.bue.edu.ar","http":{"paths":[{"backend":{"service":{"name":"kibana-kibana","port":{"number":5601}}},"pathType":"ImplementationSpecific"}]}}]}}
    kubernetes.io/ingress.class: azure/application-gateway
  creationTimestamp: "2025-01-31T13:12:06Z"
  generation: 1
  name: kibana-ingress
  namespace: elasticsearch
  resourceVersion: "17760702"
  uid: cafd52a0-cc8a-4ca9-9c26-7c9e3e8ebcc0
spec:
  rules:
  - host: kibana.eus2.prod.vue.bue.edu.ar
    http:
      paths:
      - backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 10.0.8.10
